--- a/css/style.css
+++ b/css/style.css
@@ -105,9 +105,31 @@ li >a:hover{
   
 }
 
-aside{
+aside > ul {
+    margin: 5px 0px;
+    background-color: var(--lightpink);
+    padding: 10px;
+    border-radius: 0px 0px 10px 10px;
   
 }
+
+div.video {
+  background-color: var(--lightpink);
+  margin: 5px 0px 15px 0px;
+  padding: 20px;
+  padding-bottom: 59%;
+  position: relative;
+
+}
+
+div.video > iframe {
+  position: absolute;
+  top: 5%;
+  left: 5%;
+  width: 90%;
+  height: 90%;
+}
+
 
 img {
   width: 100%;
